<resources>
    <string name="app_name">Church Finder</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="register">Register New Account</string>
    <string name="ob1_title">Find Church</string>
    <string name="ob1_desc">Provide location of the church\nto help you search faster</string>
    <string name="ob2_title">Mass Schedule</string>
    <string name="ob2_desc">Provide complete mass schedule \n including the language \n of the mass</string>
    <string name="ob3_title">Church Information</string>
    <string name="ob3_desc">Provide all of the church information \n including photos, contacts, \n and facilities</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome, \nAlvin Adhitama</string>
    <string name="save_photo">Save and Proceed</string>
    <string name="popular_church">Popular Church in</string>
    <string name="yogyakarta">Yogyakarta</string>
    <string name="church">Church</string>
    <string name="address">Address</string>
    <string name="language">Language</string>
    <string name="contact">Contact</string>
    <string name="add_to_fav">Add to Favorites</string>
    <string name="added_to_fav">Added to Favorites</string>
    <string name="mass_schedule">Mass Schedule</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Settings</string>
    <string name="up_to_date">Keep it up to date</string>
    <string name="help">Help</string>
    <string name="facility">Facility</string>
    <string name="signin_google">Sign In with Google</string>
    <string name="another_church">Another Church</string>
    <string name="remove_favorite">Remove from Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="added_favorite">Added to Favorite</string>
    <string name="see_all">See all</string>
    <string name="title_activity_coba_maps">Map</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps_test">Map</string>
    <string name="search">Search</string>
    <string name="telephone">Telephone</string>
    <string name="tap_info">Tap for more info</string>
    <string name="close">Close</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_connection2">Make sure that Wi-Fi or mobile data is\n turned on, then try again</string>
    <string name="choose_image">Choose Images Source</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="whaton">What\'s On Church Finder</string>
    <string name="logout">Log Out</string>
    <string name="reset">Reset Password</string>
    <string name="features">Features</string>
    <string name="logout_dialog">Are you sure want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="new_email_address">New Email Address</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_now">Register Now</string>
    <string name="registered_email">Type the registered email address. Verification link will be sent to registered email.</string>
    <string name="send">Send</string>
    <string name="email_not_sent">Email not sent</string>
    <string name="email_not_sent_2">Your email address is not registered. Change to another email or register new account.</string>
    <string name="email_successfully_sent">Email successfully sent</string>
    <string name="email_successfully_sent2">Please check your email. Click on the verification link to reset your password.</string>
    <string name="navigate">Navigate</string>
    <string name="not_available">Not Available</string>
    <string name="my_favorite">My Favorite</string>
</resources>
