<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/choose_image"
        android:textColor="@android:color/black"
        android:padding="24dp"
        android:textSize="20sp" />
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/gradient_gold" />

    <TextView
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="24dp"
        android:text="@string/gallery"
        android:textColor="@color/colorBlue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:padding="24dp"
        android:text="@string/camera"
        android:textColor="@color/colorBlue"
        android:textSize="20sp" />

</LinearLayout>